# LLVM-embedded-toolchain-for-Arm

./: .cmakelintrc  .gitignore  0001-Add-combinations-of-commands-for-which-multi-lib-is-.patch  0001-Remove-armv4t-armv5t-from-check-all-targets.patch  0001-Update-boot-flash-size-and-starting-address-of-flash.patch  0001-Update-picolibc-patch-file.patch  CHANGELOG.md  CMakeLists.txt  Dockerfile  Omax.cfg  OmaxLTO.cfg  README.md  big-endian.cfg  build-clang.sh  build-common.sh  build-compiler-rt.sh  build-from-public-repos.sh  build-misc.sh  build-newlib.sh  build.sh  config.sh  configure-toolchain.sh  lint-requirements.txt  llvmlibc.cfg  multilib-fpus.py  multilib-generate.py  newlib.cfg  package-toolchain.sh  prepare-source.sh  requirements-lint.txt  requirements.txt  run-precommit-checks.sh  setup.sh  versions.json  versions.yml
.github/workflows/: c-cpp.yml  docker-publish.yml  lint.yml
arm-multilib/: CMakeLists.txt  multilib-generate.py  multilib.yaml.in
arm-multilib/json/: multilib.json
arm-multilib/json/variants/: aarch64a.json  aarch64a_be.json  aarch64a_be_exn_rtti.json  aarch64a_be_soft_nofp.json  aarch64a_be_soft_nofp_exn_rtti.json  aarch64a_exn_rtti.json  aarch64a_soft_nofp.json  aarch64a_soft_nofp_exn_rtti.json  aarch64a_strictalign.json  aarch64a_strictalign_exn_rtti.json  armebv6m_soft_nofp.json  armebv6m_soft_nofp_exn_rtti.json  armv4t.json  armv4t_exn_rtti.json  armv5te.json  armv5te_exn_rtti.json  armv6m_soft_nofp.json  armv6m_soft_nofp_exn_rtti.json  armv6m_soft_nofp_exn_rtti_unaligned.json  armv6m_soft_nofp_unaligned.json  armv7a_hard_vfpv3_d16.json  armv7a_hard_vfpv3_d16_exn_rtti.json  armv7a_hard_vfpv3_d16_exn_rtti_unaligned.json  armv7a_hard_vfpv3_d16_unaligned.json  armv7a_soft_nofp.json  armv7a_soft_nofp_exn_rtti.json  armv7a_soft_nofp_exn_rtti_unaligned.json  armv7a_soft_nofp_strictalign.json  armv7a_soft_nofp_strictalign_exn_rtti.json  armv7a_soft_nofp_strictly_aligned.json  armv7a_soft_nofp_strictly_aligned_exn_rtti.json  armv7a_soft_nofp_unaligned.json  armv7a_soft_vfpv3_d16.json  armv7a_soft_vfpv3_d16_exn_rtti.json  armv7a_soft_vfpv3_d16_exn_rtti_unaligned.json  armv7a_soft_vfpv3_d16_unaligned.json  armv7m_hard_fpv4_sp_d16.json  armv7m_hard_fpv4_sp_d16_exn_rtti.json  armv7m_hard_fpv4_sp_d16_exn_rtti_unaligned.json  armv7m_hard_fpv5_d16.json  (+40 more)
arm-runtimes/: CMakeLists.txt  meson-cross-build.txt.in
arm-runtimes/test-support/: lit-exec-fvp.py  llvm-libc++-picolibc.cfg.in  llvm-libc++abi-picolibc.cfg.in  llvm-libunwind-picolibc.cfg.in  modify-compiler-rt-xml.py  modify-picolibc-xml.py  picolibc-test-wrapper.py  run_fvp.py  run_qemu.py
cmake/: .gitattributes  THIRD-PARTY-LICENSES.txt.in  VERSION.txt.in  config.cfg.in  copy_target_libraries.py  fetch_llvm.cmake  fetch_newlib.cmake  fetch_picolibc.cmake  generate_version_txt.cmake  handle-windows-symlinks.sh  meson-cross-build.txt.in  multilib.yaml.in  patch_llvm.py  patch_repo.cmake  patch_repo.py  read_versions.cmake  to_meson_list.cmake
contrib/: contrib.cmake
contrib/profiling/: CMakeLists.txt  InstrProfilingFileOther.c  README.md  clang_rt.profile.cmake  rt-profile.cmake
docs/: building-from-source.md  contributing.md  llvmlibc.md  migrating.md  newlib.md  optimization-flags.md
fvp/: get_fvps.sh
fvp/config/: cortex-m85.cfg  m-big-endian.cfg  m-fp.cfg  m-nofp.cfg  m-pacbti.cfg  mve-fp.cfg  mve-int.cfg  mve-none.cfg  v8a-aarch32.cfg  v8a-aarch64.cfg  v8r-aarch32.cfg  v8r-aarch64.cfg
ldscript/: base_aarch64.ld  base_arm.ld
llvmlibc-support/: CMakeLists.txt  crt0.c  exit.c  init.c  platform.h  semihost.h  stdio_read.c  stdio_write.c
packagetest/: CMakeLists.txt  README.md  baremetal-semihosting-aarch64.test  baremetal-semihosting.test  baremetal-uart.test  cpp-baremetal-semihosting-cfi.test  cpp-baremetal-semihosting-exceptions.test  cpp-baremetal-semihosting-prof.test  cpp-baremetal-semihosting-ubsan.test  cpp-baremetal-semihosting.test  hello.c  hello.cpp  lit.cfg.py  lit.site.cfg.py.in
patches/: llvm-0.1.patch  llvm-13.patch  llvm-14.patch  llvm-HEAD.patch  llvm-project.patch  newlib-0.1.patch  newlib-4.1.0-llvm-14.patch  newlib-HEAD.patch  newlib.patch  picolibc-HEAD.patch  picolibc.patch
patches/llvm-project/: 0001-Add-ExclusiveGroup-feature-to-multilib.yam.patch  0001-Add-ExclusiveGroup-feature-to-multilib.yaml.patch  0001-Fix-llvm-test-CodeGen-ARM-build-attributes.ll-test.patch  0001-libc-tests-with-picolibc-xfail-one-remaining-test.patch  0001-libc-tests-with-picolibc-xfail-two-remaining-tests.patch  0001-xfail-two-remaining-libcxx-with-picolibc-tests.patch  0002-Add-check-for-building-with-picolibc.patch  0002-libc-Add-check-for-building-with-picolibc.patch  0002-libc-tests-with-picolibc-disable-large-tests.patch  0002-tests-with-picolibc-disable-large-tests.patch  0002-xfail-two-remaining-libcxx-with-picolibc-tests.patch  0003-Disable-failing-compiler-rt-test.patch  0003-Run-picolibc-tests-with-qemu.patch  0003-libc-tests-with-picolibc-disable-large-tests.patch  0004-Disable-failing-compiler-rt-test.patch  0004-libc-tests-with-picolibc-XFAIL-uses-of-atomics.patch  0004-libc-tests-with-picolibc-add-has-compolete-fenv-feat.patch  0004-libc-tests-with-picolibc-handle-stdin.patch  0004-libc-tests-with-picolibc-mark-sort-test-as-long-one.patch  (+56 more)
patches/llvm-project-perf/: 0000-LTOpasses-add-loop-unroll.patch  0000-Placeholder-commit.patch  0001-LTOpasses-add-loop-unroll.patch  0002-ARM-CodeGen-Disable-MEMCPY-LDM-STM-inlining-for-v7-m.patch  0002-ARM-Codegen-Set-LDM-STM-inlining-preference-for-v7m.patch
samples/: .gitignore  Makefile.conf  README.md
scripts/: .pylintrc  build.py  cfg_files.py  check.py  config.py  execution.py  make.py  package.py  repos.py  setup.py  tarball.py  util.py
test/: CMakeLists.txt  Makefile.conf  lit.cfg.py
test-support/: lit-exec-fvp.py  lit-exec-qemu.py  llvm-libc++-picolibc.cfg.in  llvm-libc++abi-picolibc.cfg.in  llvm-libunwind-picolibc.cfg.in  picolibc-lit-test-abort.template  picolibc-lit-test.template  picolibc-lit.site.cfg.py.in  picolibc-test-wrapper.py  run-picolibc-tests.py  run_fvp.py  run_qemu.py
tests/: lit.site.cfg.py.in
(+90 files in other folders)
